# asr-local

./: .gitignore  AGENTS.md  CONTEXT.md  PRD_Tauri_Vue_TS_Refactor_ASR_Local_Desktop.md  PRD_Workflow_Runtime_V2.md  启动听记助手.bat  开发模式启动.bat  快速调试听记助手.bat  构建听记助手.bat
apps/desktop-electron/: README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/desktop-tauri/: README.md  index.html  package-lock.json  package.json  vite.config.ts
apps/desktop-tauri/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop-tauri/src-tauri/capabilities/: main.json
apps/desktop-tauri/src-tauri/src/: asr_profiles.rs  commands.rs  config.rs  history.rs  main.rs  session_log.rs  summary_api.rs  summary_profiles.rs  summary_templates.rs  worker_client.rs  worker_contract.rs  workflow_contract_v2.rs  workflow_v2_client.rs  workflow_v2_commands.rs
apps/worker-python/: README.md  pyproject.toml
apps/worker-python/app/: __init__.py  audio.py  config.py  exporters.py  logging_utils.py  main.py  schemas.py
apps/worker-python/app/diagnostics/: __init__.py  dpapi.py
apps/worker-python/app/ipc/: __init__.py  protocol.py
apps/worker-python/app/ipc/v2/: __init__.py  canonical.py  codec.py  errors.py
apps/worker-python/app/models/: __init__.py  manager.py
apps/worker-python/app/pipeline/: __init__.py  chunked_local.py  cloud_asr.py  interfaces.py  job_runner.py  legacy_v2.py  moss_v2.py  pyannote_provider.py  qwen_subprocess.py  router.py  segment_planner.py  segment_types.py
apps/worker-python/app/runtime/: __init__.py  env.py  gpu_lifecycle.py
apps/worker-python/app/summary/: __init__.py  openai_compatible.py
apps/worker-python/app/supervisor/: __init__.py  server.py
apps/worker-python/app/workflow/: __init__.py  model_snapshot.py  output_layout.py  registry.py  runtime_plan.py  secrets.py  state_machine.py  supervisor.py
apps/worker-python/scripts/: phase0_moss_native_smoke.py  probe_chunked_runtime.py  qwen_segment_worker.py
apps/worker-python/tests/contract_v2/: test_audio_normalization.py  test_chunked_local_device.py  test_chunked_router.py  test_cloud_asr.py  test_codec.py  test_gpu_lifecycle.py  test_model_snapshot.py  test_moss_v2_adapter.py  test_pipeline_mode.py  test_pipeline_phase3_guards.py  test_pyannote_provider.py  test_qwen_runtime.py  test_registry_migration.py  test_runtime_paths.py  test_runtime_plan.py  test_secret_broker.py  test_segment_planner.py  test_server_startup.py  test_state_machine.py  test_summary_adapter.py  test_supervisor.py  test_v1_fixtures.py
config/: models.toml  moss-native.lock.toml  summary_profiles.example.toml  summary_templates.toml
contracts/worker-v1/: README.md
contracts/workflow-v2/: README.md
docs/: Electron_Migration_Implementation_Report.md  Phase0_Baseline.md  Workflow_Runtime_V2_Implementation_Plan.md  worker-contract-v1.md  worker-contract-v2.md
docs/benchmarks/: pyannote-dual-asr-production-gate.md
docs/legacy/: restore_diagnostics.txt  (+3 more)
models/: README.md
(+110 files in other folders)
