[project]
name = "asr-local-worker"
version = "0.1.0"
description = "Local Python worker for pyannote + Qwen3-ASR transcription pipeline."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
inference = [
  "imageio-ffmpeg",
  "numpy",
  "librosa",
  "soundfile",
  "torch",
  "transformers",
  "qwen-asr",
  "pyannote.audio",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
