[project]
name = "asr-local-worker"
version = "0.1.0"
description = "Local Python worker for pyannote + Qwen3-ASR transcription pipeline."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
inference = [
  "imageio-ffmpeg==0.6.0",
  "numpy",
  "librosa",
  "soundfile",
  "torch",
  "transformers",
  "safetensors",
  "qwen-asr",
  "pyannote.audio",
]
moss-native = [
  "imageio-ffmpeg==0.6.0",
  "numpy==2.5.1",
  "soundfile==0.14.0",
  "safetensors==0.8.0",
  "torch==2.13.0",
  "transformers==5.13.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
