[project]
name = "asr-local-worker"
version = "0.1.0"
description = "Local Python worker for pyannote + Qwen3-ASR transcription pipeline."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
inference = [
  "imageio-ffmpeg==0.6.0",
  "numpy==2.4.6",
  "librosa==0.11.0",
  "soundfile==0.14.0",
  "safetensors==0.8.0",
  "torch==2.9.0+cu130",
  "torchaudio==2.9.0+cu130",
  "torchcodec==0.11.1",
  "transformers==4.57.6",
  "huggingface-hub==0.36.2",
  "tokenizers==0.22.2",
  "accelerate==1.12.0",
  "qwen-asr==0.0.6",
  "qwen-omni-utils==0.0.9",
  "nagisa==0.2.11",
  "soynlp==0.0.493",
  "sox==1.5.0",
  "pyannote.audio==4.0.4",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
